顶部标题栏

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <!--标题栏-->
+    <include layout="@layout/titlebar"/>
 
     <!--FrameLayout-->
     <FrameLayout
