--- a/app/src/main/res/layout/video_pager.xml
+++ b/app/src/main/res/layout/video_pager.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <ListView
+        android:divider="@null"
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
