--- a/app/src/main/res/layout/activity_system_video_player.xml
+++ b/app/src/main/res/layout/activity_system_video_player.xml
@@ -11,4 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <!--控制面板-->
+    <include layout="@layout/media_controller"/>
+
 </RelativeLayout>
