--- a/app/src/main/res/layout/activity_system_video_player.xml
+++ b/app/src/main/res/layout/activity_system_video_player.xml
@@ -5,13 +5,13 @@
     android:background="@android:color/black"
     android:gravity="center">
 
-    <VideoView
+    <com.fucang.mobileplayer.view.VideoView
         android:id="@+id/videoview"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <!--控制面板-->
-    <include layout="@layout/media_controller"/>
+    <include layout="@layout/media_controller" android:id="@+id/media_controller"/>
 
 </RelativeLayout>
