--- a/app/src/main/res/layout/activity_audio_player.xml
+++ b/app/src/main/res/layout/activity_audio_player.xml
@@ -5,6 +5,7 @@
     android:background="@drawable/base_bg">
 
     <RelativeLayout
+        android:id="@+id/rl_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -37,6 +38,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/ll_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -110,7 +112,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_lyrc_selector" />
-
         </LinearLayout>
+
     </LinearLayout>
+
+    <com.fucang.mobileplayer.view.ShowLyricView
+        android:id="@+id/showLyricView"
+        android:layout_below="@id/rl_top"
+        android:layout_above="@id/ll_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
