--- a/app/src/main/res/layout/activity_audio_player.xml
+++ b/app/src/main/res/layout/activity_audio_player.xml
@@ -9,12 +9,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_icon"
-            android:src="@drawable/now_playing_matrix_01"
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_icon"-->
+            <!--android:visibility="gone"-->
+            <!--android:src="@drawable/now_playing_matrix_01"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+
+        <com.fucang.mobileplayer.view.BaseVisualizerView
+            android:id="@+id/baseVisualizerView"
             android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="300dp"
+            android:layout_height="100dp"/>
 
         <TextView
             android:id="@+id/iv_artist"
