--- a/app/src/main/res/layout/all_gif_item.xml
+++ b/app/src/main/res/layout/all_gif_item.xml
@@ -22,7 +22,7 @@
 
         <include layout="@layout/gif_middle" />
 
-        <include layout="@layout/common_bottom" />
+        <!--<include layout="@layout/common_bottom" />-->
     </LinearLayout>
 
 </LinearLayout>
