--- a/app/src/main/res/layout/ad_middle.xml
+++ b/app/src/main/res/layout/ad_middle.xml
@@ -10,11 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:text="这哪里是在斗牛，分明就是玩命嘛！"
+        android:text="广告"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 
-    <ImageView
+    <com.shizhefei.view.largeimage.LargeImageView
         android:id="@+id/iv_image_icon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
